seaqt/QtCore/gen_qtipccommon.h

class QMetaObject;
class QNativeIpcKey;
typedef struct QMetaObject QMetaObject;
typedef struct QNativeIpcKey QNativeIpcKey;
QNativeIpcKey* QNativeIpcKey_new();
QNativeIpcKey* QNativeIpcKey_new_type(uint16_t type);
QNativeIpcKey* QNativeIpcKey_new_k(struct seaqt_string k);
QNativeIpcKey* QNativeIpcKey_new_from(QNativeIpcKey* from);
QNativeIpcKey* QNativeIpcKey_new_k_type(struct seaqt_string k, uint16_t type);
uint16_t QNativeIpcKey_legacyDefaultTypeForOs();
void QNativeIpcKey_operatorAssign(QNativeIpcKey* self, QNativeIpcKey* from);
void QNativeIpcKey_swap(QNativeIpcKey* self, QNativeIpcKey* other);
bool QNativeIpcKey_isEmpty(const QNativeIpcKey* self);
bool QNativeIpcKey_isValid(const QNativeIpcKey* self);
uint16_t QNativeIpcKey_type(const QNativeIpcKey* self);
void QNativeIpcKey_setType(QNativeIpcKey* self, uint16_t type);
struct seaqt_string QNativeIpcKey_nativeKey(const QNativeIpcKey* self);
void QNativeIpcKey_setNativeKey(QNativeIpcKey* self, struct seaqt_string newKey);
struct seaqt_string QNativeIpcKey_toString(const QNativeIpcKey* self);
QNativeIpcKey* QNativeIpcKey_fromString(struct seaqt_string string);
const QMetaObject* QNativeIpcKey_staticMetaObject();